embedded-interfaces/tests/compile_fail/enum_too_many_bits.rs
use embedded_interfaces::codegen::interface_objects;
interface_objects! {
    enum TooWide: u8{9} {
        _ A
    } // u8 only has 8 bits
}
fn main() {}
